FIX - Icon preview align

--- a/styles/Navigation.module.css
+++ b/styles/Navigation.module.css
@@ -42,7 +42,6 @@
   height: 75px;
   display: flex;
   align-items: center;
-  justify-content: left;
   gap: 1rem;
 }
 
@@ -108,7 +107,7 @@
   background-color: var(--main-bg-purple-color);
   width: 100%;
   margin: 0;
-  padding: 0.75rem 1rem;
+  padding: 0.75rem 3.75rem;
   border-bottom: 3px solid var(--main-purple-color);
 }
 
